--- a/ViewPagerAddons/viewpageraddons-library/src/main/res/values/colors.xml
+++ b/ViewPagerAddons/viewpageraddons-library/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--SlidingTabLayoutColor default colors-->
-    <color name="indicatorColor">#CC33b5e5</color>
+    <color name="indicatorColor">#33b5e5</color>
     <color name="textColor">#80000000</color>
     <color name="textColorSelected">#000000</color>
     <color name="dividerColor">#cccccc</color>
