--- a/ViewPagerAddons/viewpageraddons-sample-app/src/main/res/layout/activity_my.xml
+++ b/ViewPagerAddons/viewpageraddons-sample-app/src/main/res/layout/activity_my.xml
@@ -1,13 +1,13 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:cstl="http://schemas.android.com/apk/res-auto"
+    xmlns:vpa="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <com.manas.viewpageraddons.view.SlidingTabLayoutColor
-        android:id="@+id/coloredSlidingTabLayout"
+        android:id="@+id/slidingTabLayoutColor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
